# rust_arrow_datafusion

./: .env  Cargo.toml  README.md
data/: ejemplo.parquet
src/: api.rs  config.rs  main.rs  query.rs
