[package]
name = "rust_arrow_datafusion"
version = "0.1.0"
edition = "2024"
authors = ["Victor Aguayo"]

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
datafusion = "46.0.0"
hyper = "1"
anyhow ={ version = "1.0", features = ["std"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
arrow = "54.0.0"